--- a/article.html
+++ b/article.html
@@ -103,15 +103,15 @@ h2:hover{
 
   <div class="topnav">
     <a href="#faq">F.A.Q</a>
-    <a href="#article">Moment</a>
-    <a class="active" href="#article">Article</a>
+    <a href="moment.html#moment">Moment</a>
+    <a class="active" href="article.html#article">Article</a>
     <a href="#hotel">Hotels</a>
     <a href="#destination">Destination</a>
-    <a href="#home">Home</a>
+    <a href="index.html#home">Home</a>
     </div>
 
 <div class="info">
-    <p>Backpackers essentials</p>
+    <p href="#backpackers">Backpackers essentials</p>
     <img src="pexels-photo-346805.jpeg" alt="backpack">
     <h1>Nowadays, there were a lot of people tend to choose backpacking
       method of traveling as it is more convenient rather than bring big luggage...</h1>
@@ -120,7 +120,7 @@ h2:hover{
     <br>
     <hr color="grey">
 
-    <p>Solo traveller: safest place to go out of country</p>
+    <p href="#solo">Solo traveller: safest place to go out of country</p>
     <img src="adult-adventure-backpack-1540592.jpg" alt="solo travel">
     <h1>Why travel solo, there are many reasons that can be relate.
     Its either your travels partner could not fit with your schedule,
