--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@ h2:hover{
 
   <div class="topnav">
     <a href="#faq">F.A.Q</a>
-    <a href="#moment">Moment</a>
-    <a href="#article">Article</a>
+    <a href="moment.html#moment">Moment</a>
+    <a href="article.html#article">Article</a>
 
     <a href="#hotel">Hotels</a>
     <a href="#destination">Destination</a>
-    <a class="active" href="#home">Home</a>
+    <a class="active" href="index.html#home">Home</a>
     </div>
 
     <div class="centre">
