--- a/moment.html
+++ b/moment.html
@@ -50,17 +50,17 @@
 
   <div class="topnav">
     <a href="#faq">F.A.Q</a>
-    <a class="active" href="#article">Moment</a>
-    <a href="#article">Article</a>
+    <a class="active" href="moment.html#moment">Moment</a>
+    <a href="article.html#article">Article</a>
     <a href="#destination">Destination</a>
-    <a href="#home">Home</a>
+    <a href="index.html#home">Home</a>
     </div>
 
 <div class="moment">
   <p><strong>Moment</strong> is a section where our viewer from all over the world can share their pictures
   and expereince through their journey</p>
 
-  
+
 
 </div>
 
