--- a/moment.html
+++ b/moment.html
@@ -11,6 +11,11 @@
       background-color: #fef2da;
     }
 
+    .tabcontent h2:hover{
+      text-decoration: underline;
+
+    }
+
   .topnav {
     display: block;
       overflow: hidden;
@@ -38,8 +43,42 @@
 
   .topnav a.active {
       color: white;
-
   }
+
+  .tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
 
   </style>
   </head>
@@ -52,20 +91,64 @@
     <a href="#faq">F.A.Q</a>
     <a class="active" href="moment.html#moment">Moment</a>
     <a href="article.html#article">Article</a>
+    <a href="#hotel">Hotels</a>
     <a href="#destination">Destination</a>
     <a href="index.html#home">Home</a>
     </div>
 
-<div class="moment">
-  <p><strong>Moment</strong> is a section where our viewer from all over the world can share their pictures
-  and expereince through their journey</p>
-
-
-
+<div class="tab">
+  <button class="tablinks" onclick="openCity(event, 'Singapore')">Singapore</button>
+  <button class="tablinks" onclick="openCity(event, 'Melaka')">Melaka</button>
+  <button class="tablinks" onclick="openCity(event, 'Langkawi')">Langkawi</button>
+  <button class="tablinks" onclick="openCity(event, 'Penang')">Penang</button>
 </div>
 
-
+<div id="Singapore" class="tabcontent">
+  <h1>Singapore</h1>
+  <h2 onclick="location.href='https://www.instagram.com/_mustaqimah'">@Mustaqimah</h2>
+  <img src="singaporeflyer.jpg" alt="singaporeflyer" width="750px" height="400px" left="50%">
+  <img src="orange.jpg" alt="orange" width="450px" height="400px" align="right">
 </div>
+
+<div id="Melaka" class="tabcontent">
+  <h1>Melaka</h1>
+  <h2>@ChiaJee</h2>
+  <img src="afamosa.jpg" alt="afamosa" width="600px" height="400px" left="50%">
+  <img src="tamingsari.jpg" alt="tamingsari" width="600px" height="400px" align="right">
+</div>
+
+<div id="Langkawi" class="tabcontent">
+  <h1>Langkawi</h1>
+  <h2>@Mandy</h2>
+  <img src="eagle.jpg" alt="afamosa" width="600px" height="400px" left="50%">
+  <img src="skybridge.jpg" alt="tamingsari" width="600px" height="400px" align="right">
+</div>
+
+<div id="Penang" class="tabcontent">
+  <h1>Penang</h1>
+  <h2>@NgJason</h2>
+  <img src="tram.jpg" alt="bukitbendera" width="600px" height="400px" left="50%">
+  <img src="bicycle.jpg" alt="bicycle" width="600px" height="400px" align="right">
+</div>
+<script>
+function openCity(evt, cityName) {
+
+    var i, tabcontent, tablinks;
+
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+    }
+
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+
+    document.getElementById(cityName).style.display = "block";
+    evt.currentTarget.className += " active";
+}
+</script>
 
   </body>
 </html>
