--- a/article.html
+++ b/article.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>MYTour-Article</title>
-    <link href="https://fonts.googleapis.com/css?family=Spinnaker" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
     <style media="screen">
@@ -24,10 +24,10 @@
     }
 
     p{
-    font-size: 220%;
-    font-style: normal;
-    font-family: 'Spinnaker', sans-serif;
-    text-align: left;
+      font-weight: bold;
+      font-family: fantasy;
+      position: center;
+      font-size: 50px;
    }
 
    .info p:hover {
@@ -94,6 +94,8 @@ h2:hover{
 
   }
 
+
+
   </style>
   </head>
 
@@ -102,30 +104,31 @@ h2:hover{
 <div class="container">
 
   <div class="topnav">
-    <a href="#faq">F.A.Q</a>
+    <a href="faq.html#faq">F.A.Q</a>
     <a href="moment.html#moment">Moment</a>
     <a class="active" href="article.html#article">Article</a>
-    <a href="#hotel">Hotels</a>
-    <a href="#destination">Destination</a>
+    <a href="itinerary.html#itinerary">Itinerary</a>
+    <a href="hotel.html#hotel">Hotels</a>
+    <a href="destination.html#destination">Destination</a>
     <a href="index.html#home">Home</a>
     </div>
 
 <div class="info">
-    <p href="#backpackers">Backpackers essentials</p>
+    <p onclick="location.href='backpack.html'">Backpackers essentials</p>
     <img src="pexels-photo-346805.jpeg" alt="backpack">
     <h1>Nowadays, there were a lot of people tend to choose backpacking
       method of traveling as it is more convenient rather than bring big luggage...</h1>
-    <h2>Read More</h2>
+    <h2 onclick="location.href='backpack.html'">Read More</h2>
 
     <br>
     <hr color="grey">
 
-    <p href="#solo">Solo traveller: safest place to go out of country</p>
+    <p onclick="location.href='solo.html'">Solo traveller: safest place to go out of country</p>
     <img src="adult-adventure-backpack-1540592.jpg" alt="solo travel">
     <h1>Why travel solo, there are many reasons that can be relate.
     Its either your travels partner could not fit with your schedule,
     you need freedom and new experience where you can...</h1>
-    <h2>Read More</h2>
+    <h2 onclick="location.href='solo.html'">Read More</h2>
 
     <br>
     <hr color="grey">
