--- a/index.html
+++ b/index.html
@@ -83,9 +83,6 @@ h2:hover{
     padding-left:none;
     padding-top: 101px;
 }
-
-
-
   </style>
   </head>
 
@@ -94,12 +91,12 @@ h2:hover{
 <div class="container">
 
   <div class="topnav">
-    <a href="#faq">F.A.Q</a>
+    <a href="faq.html#faq">F.A.Q</a>
     <a href="moment.html#moment">Moment</a>
     <a href="article.html#article">Article</a>
-
-    <a href="#hotel">Hotels</a>
-    <a href="#destination">Destination</a>
+    <a href="itinerary.html#itinerary">Itinerary</a>
+    <a href="hotel.html#hotel">Hotels</a>
+    <a href="destination.html#destination">Destination</a>
     <a class="active" href="index.html#home">Home</a>
     </div>
 
@@ -113,7 +110,7 @@ h2:hover{
     <p> MYTOUR</p>
     <h1>Explore the Moment</h1>
     <br>
-    <h2>About Us</h2>
+    <h2 onclick="location.href='aboutus.html#aboutus'">About Us</h2>
   </div>
 
 
