--- a/moment.html
+++ b/moment.html
@@ -80,6 +80,13 @@
     border-top: none;
 }
 
+p{
+  font-weight: bold;
+  font-family: fantasy;
+  text-align: center;
+  font-size: 50px;
+}
+
   </style>
   </head>
 
@@ -88,11 +95,12 @@
 <div class="container">
 
   <div class="topnav">
-    <a href="#faq">F.A.Q</a>
+    <a href="faq.html#faq">F.A.Q</a>
     <a class="active" href="moment.html#moment">Moment</a>
     <a href="article.html#article">Article</a>
-    <a href="#hotel">Hotels</a>
-    <a href="#destination">Destination</a>
+    <a href="itinerary.html#itinerary">Itinerary</a>
+    <a href="hotel.html#hotel">Hotels</a>
+    <a href="destination.html#destination">Destination</a>
     <a href="index.html#home">Home</a>
     </div>
 
@@ -130,6 +138,8 @@
   <img src="tram.jpg" alt="bukitbendera" width="600px" height="400px" left="50%">
   <img src="bicycle.jpg" alt="bicycle" width="600px" height="400px" align="right">
 </div>
+
+<p>Moment shared by the reader.</p>
 <script>
 function openCity(evt, cityName) {
 
