--- a/aboutus.html
+++ b/aboutus.html
@@ -56,8 +56,8 @@
     }
 
     .bg-text {
-      background-color: rgb(0,0,-0.2);
-      background-color: rgba(0,0,0,0.4);
+      background-color: rgb(0,0,0.4);
+      background-color: rgba(0,0,0,0.2);
       color: black ;
       font-weight: bold;
       border: 1px solid none;
@@ -129,7 +129,8 @@
         <a href="moment.html#moment">Moment</a>
         <a href="article.html#article">Article</a>
         <a href="itinerary.html#itinerary">Itinerary</a>
-        <a href="hotel.html#hotel">Hotels</a>
+        <a href="hotel.html#hotel">Hotel</a>
+        <a href="food.html#food">Food</a>
         <a href="destination.html#destination">Destination</a>
         <a href="index.html#home">Home</a>
         </div>
