--- a/article.html
+++ b/article.html
@@ -108,7 +108,8 @@ h2:hover{
     <a href="moment.html#moment">Moment</a>
     <a class="active" href="article.html#article">Article</a>
     <a href="itinerary.html#itinerary">Itinerary</a>
-    <a href="hotel.html#hotel">Hotels</a>
+    <a href="hotel.html#hotel">Hotel</a>
+    <a href="food.html#food">Food</a>
     <a href="destination.html#destination">Destination</a>
     <a href="index.html#home">Home</a>
     </div>
