--- a/destination.html
+++ b/destination.html
@@ -102,7 +102,8 @@ text-align: center;
       <a href="moment.html#moment">Moment</a>
       <a href="article.html#article">Article</a>
       <a href="itinerary.html#itinerary">Itinerary</a>
-      <a href="hotel.html#hotel">Hotels</a>
+      <a href="hotel.html#hotel">Hotel</a>
+      <a href="food.html#food">Food</a>
       <a class="active" href="destination.html#destination">Destination</a>
       <a href="index.html#home">Home</a>
       </div>
