--- a/moment.html
+++ b/moment.html
@@ -48,12 +48,12 @@
   .tab {
     overflow: hidden;
     border: 1px solid #ccc;
-    background-color: #f1f1f1;
+    background-color: #D3D3D3;
 }
 
 /* Style the buttons that are used to open the tab content */
 .tab button {
-    background-color: inherit;
+    background-color: #C0C0C0;
     float: left;
     border: none;
     outline: none;
@@ -78,6 +78,7 @@
     padding: 6px 12px;
     border: 1px solid #ccc;
     border-top: none;
+    
 }
 
 p{
@@ -99,7 +100,8 @@ p{
     <a class="active" href="moment.html#moment">Moment</a>
     <a href="article.html#article">Article</a>
     <a href="itinerary.html#itinerary">Itinerary</a>
-    <a href="hotel.html#hotel">Hotels</a>
+    <a href="hotel.html#hotel">Hotel</a>
+    <a href="food.html#food">Food</a>
     <a href="destination.html#destination">Destination</a>
     <a href="index.html#home">Home</a>
     </div>
