--- a/hotel.html
+++ b/hotel.html
@@ -178,7 +178,8 @@ padding-left: 120px;
         <a href="moment.html#moment">Moment</a>
         <a href="article.html#article">Article</a>
         <a href="itinerary.html#itinerary">Itinerary</a>
-        <a class="active"href="hotel.html#hotel">Hotels</a>
+        <a class="active" href="hotel.html#hotel">Hotel</a>
+        <a href="food.html#food">Food</a>
         <a href="destination.html#destination">Destination</a>
         <a  href="index.html#home">Home</a>
         </div>
