--- a/kkitnry.html
+++ b/kkitnry.html
@@ -116,7 +116,8 @@
         <a href="moment.html#moment">Moment</a>
         <a href="article.html#article">Article</a>
         <a class="active" href="itinerary.html#itinerary">Itinerary</a>
-        <a href="hotel.html#hotel">Hotels</a>
+        <a href="hotel.html#hotel">Hotel</a>
+        <a href="food.html#food">Food</a>
         <a href="destination.html#destination">Destination</a>
         <a href="index.html#home">Home</a>
         </div>
