--- a/solo.html
+++ b/solo.html
@@ -107,7 +107,8 @@ display: block;
 <a href="moment.html#moment">Moment</a>
 <a class="active" href="article.html#article">Article</a>
 <a href="itinerary.html#itinerary">Itinerary</a>
-<a href="hotel.html#hotel">Hotels</a>
+<a href="hotel.html#hotel">Hotel</a>
+<a href="food.html#food">Food</a>
 <a href="#destination">Destination</a>
 <a href="index.html#home">Home</a>
 </div>
