--- a/Resume/index.html
+++ b/Resume/index.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
+ <head>
+ <meta charset="utf-8">
+ <title>Resume Mus</title>
+    <link rel="stylesheet" href="resume.css">
   </head>
-  <body>
-    <h1>Resume</h1>
+  <body >
+    <hr>
+
+    <img src="profile.jpg" alt="profile">
+
+    <div class="intro" >
+      <h1>MUSTAQIMAH NAIM BINTI AB AZIZ</h1>
+      <h2>1-3D, BLOCK B, FLAT SRI SARAWAK, JALAN KENANGA,
+      55200 KUALA LUMPUR</h2>
+      <h2>011 2843 6473</h2>
+      <h2>mustaqimah.aziz@gmail.com</h2>
+      <h2>Punctuality, Committed, Honesty, Enthusiastic, Loyalty, Cooperativeness</h2>
+    </div>
+
+    <div class="objective" >
+      <h2>I am seeking a position as an intern in your organization
+      to utilize my knowledge in Information System  and gain additional
+      skills and experience.</h2>
+    </div>
+
+    <div class="education" >
+      <h2>Bachelor in Information System (Present)</h2>
+      <h2>International Islamic University Malaysia (IIUM)</h2>
+      <h3>CGPA: 3.17/4</h3>
+      <h2>Diploma in Islamic Banking and Finance (2016)</h2>
+      <h2>International Islamic College (IIC)</h2>
+      <h3>CGPA: 3.7/4</h3>
+      <h2>Smk Seri Bintang Selatan</h2>
+      <h2>2A(Bahasa Malaysia, Mathematics), 2B, 3C, 2D</h2>
+    </div>
+
+    <div class="contribute" >
+      <h2>Committee Technopreneur - 2017</h2>
+      <h2>Vice President of Islamic Banking and
+        Finance Apprentice Society(IIC) - 2016</h2>
+      <h2>Captain of Softball Club - 2013</h2>
+
+    </div>
+
+    <div class="skills" >
+      <h2>Microsoft Office - Word, Powerpoint, Excel</h2>
+      <h2>Programming Language - SQL, JAVA, C++, HTML</h2>
+      <h2>Accounting, Economics, Computer Networking, Database </h2>
+    </div>
+    <hr>
+
+
+
   </body>
 </html>
