--- a/Resume/index.html
+++ b/Resume/index.html
@@ -8,8 +8,8 @@
   <body >
 
     <hr>
-    
-    <img src="profile.jpg" alt="profile">
+
+    <img src="profile.JPG" alt="profile">
 
     <div class="intro" >
       <h1>MUSTAQIMAH NAIM BINTI AB AZIZ</h1>
