--- a/Resume/index.html
+++ b/Resume/index.html
@@ -9,7 +9,7 @@
 
     <hr>
 
-    <img src="profile.JPG" alt="profile">
+    <img src="pic.jpg" alt="profile">
 
     <div class="intro" >
       <h1>MUSTAQIMAH NAIM BINTI AB AZIZ</h1>
