--- a/Resume/index.html
+++ b/Resume/index.html
@@ -13,11 +13,10 @@
 
     <div class="intro" >
       <h1>MUSTAQIMAH NAIM BINTI AB AZIZ</h1>
-      <h2>1-3D, BLOCK B, FLAT SRI SARAWAK, JALAN KENANGA,
-      55200 KUALA LUMPUR</h2>
+      <h2>Punctuality. Committed. Honesty. Enthusiastic. Loyalty. Cooperativeness</h2>
+      <h2>1-3D, BLOCK B, FLAT SRI SARAWAK, JALAN KENANGA, 55200 KUALA LUMPUR</h2>
       <h2>011 2843 6473</h2>
       <h2>mustaqimah.aziz@gmail.com</h2>
-      <h2>Punctuality, Committed, Honesty, Enthusiastic, Loyalty, Cooperativeness</h2>
     </div>
 
     <div class="objective" >
@@ -27,6 +26,7 @@
     </div>
 
     <div class="education" >
+      <p>Education</p>
       <h2>Bachelor in Information System (Present)</h2>
       <h2>International Islamic University Malaysia (IIUM)</h2>
       <h3>CGPA: 3.17/4</h3>
@@ -38,17 +38,20 @@
     </div>
 
     <div class="contribute" >
+      <p>Curriculum</p>
       <h2>Committee Technopreneur - 2017</h2>
-      <h2>Vice President of Islamic Banking and
-        Finance Apprentice Society(IIC) - 2016</h2>
+      <h2>Vice President of Islamic Banking and Finance Apprentice Society(IIC) - 2016</h2>
       <h2>Captain of Softball Club - 2013</h2>
     </div>
 
     <div class="skills" >
+      <p>Skills</p>
       <h2>Microsoft Office - Word, Powerpoint, Excel</h2>
       <h2>Programming Language - SQL, JAVA, C++, HTML</h2>
       <h2>Accounting, Economics, Computer Networking, Database </h2>
     </div>
+
+
 
     <hr>
 
