--- a/solo.html
+++ b/solo.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Solo Travel</title>
   <style media="screen">
 
 
@@ -26,7 +26,7 @@ p{
 font-size: 220%;
 font-style: normal;
 font-family: 'Spinnaker', sans-serif;
-text-align: left;
+text-align: center;
 }
 
 .info p:hover {
@@ -59,14 +59,14 @@ position: left;
 }
 
 h2:hover{
-border:1px solid none;
-background-color: black;
-color: white;
+  border:1px solid #8c6767;
+  background-color: #8c6767;
+  color: #fef2da;
 }
 .topnav {
 display: block;
   overflow: hidden;
-  background-color: #d3c6c1;
+  background-color: #5a5240;
   margin-bottom: 1%;
   margin-left: 0%;
   margin-right: 0%;
@@ -85,7 +85,8 @@ display: block;
 }
 
 .topnav a:hover {
-  text-decoration: line-through;
+  color: white;
+  background-color: black;
 }
 
 .topnav a.active {
@@ -93,7 +94,22 @@ display: block;
 
 }
 
+.footer {
+  position: absolute;
+  right: 0;
+  margin-top: 0%;
+  left: 0;
+  text-align: center;
+  background-color: #5a5240;
+  padding: 30px;
+  color: white;
+  font-size: 12px;
+  font-family: 'Montserrat', sans-serif;
+}
 
+hr{
+  border: 4px solid #898c9b;
+}
 
 </style>
 </head>
@@ -144,6 +160,11 @@ It will definitely save your pocket while you can travel by using their public t
 Singapore Flyer, Orcard Road, Merlion Park will always make you fall in love with this country more and more. For adventure lovers, you can go
 straight to Sentosa Island where Universal Studio and Adventure Park take place.</h1>
 
-
+</div>
+<hr>
+<div class="footer">
+  <h3>Copyright © 2018, MYTour. All Rights Reserved.</h3>
+  <h3>International Islamic University Malaysia - Gombak</h3>
+</div>
 </body>
 </html>
