--- a/aboutus.html
+++ b/aboutus.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
+
     <style>
     body, html {
       height: 100%;
@@ -15,11 +16,11 @@
     .topnav {
       display: block;
         overflow: hidden;
-        background-color: #d3c6c1;
+        background-color: #5a5240;
         margin-bottom: 1%;
-        margin-left: 0%;
-        margin-right: 0%;
-        margin-top: 0%;
+        margin-left: 0.5%;
+        margin-right: 0.5%;
+        margin-top: 0.6%;
     }
 
     .topnav a {
@@ -34,7 +35,8 @@
     }
 
     .topnav a:hover {
-        text-decoration: line-through;
+        color: white;
+        background-color: black;
     }
 
     .topnav a.active {
@@ -53,6 +55,8 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+      margin-left: 2%;
+      margin-right: 2%;
     }
 
     .bg-text {
@@ -81,15 +85,15 @@
     }
 
     input[type=submit] {
-        background-color: #4CAF50;
-        color: white;
-        padding: 12px 20px;
-        border: none;
-        cursor: pointer;
+      padding: 10px;
+      width: 150px;
+      border-radius: 10px;
+     background-color: #CACFD2  ;
+       font-weight:bold;
     }
 
     input[type=submit]:hover {
-        background-color: #45a049;
+        background-color: #5D6D7E;
     }
 
     .box {
@@ -117,6 +121,25 @@
             margin-top: 0;
         }
     }
+
+    .footer {
+      position: absolute;
+      right: 0;
+      margin-top: 0%;
+      left: 0;
+      text-align: center;
+      background-color: #5a5240;
+      padding: 30px;
+      color: white;
+      font-size: 12px;
+      font-family: 'Montserrat', sans-serif;
+    }
+
+    hr{
+      border: 4px solid #898c9b;
+    }
+
+
     </style>
     <title>About Us</title>
   </head>
@@ -125,14 +148,14 @@
     <div class="container">
 
       <div class="topnav">
-        <a class="active" href="faq.html#faq">F.A.Q</a>
+        <a href="faq.html#faq">F.A.Q</a>
         <a href="moment.html#moment">Moment</a>
         <a href="article.html#article">Article</a>
         <a href="itinerary.html#itinerary">Itinerary</a>
         <a href="hotel.html#hotel">Hotel</a>
         <a href="food.html#food">Food</a>
         <a href="destination.html#destination">Destination</a>
-        <a href="index.html#home">Home</a>
+        <a class="active" href="index.html#home">Home</a>
         </div>
 
       </div>
@@ -178,8 +201,13 @@
       </form>
     </div>
   </div>
-</div>
 
+  <hr>
+  <div class="footer">
+    <h3>Copyright © 2018, MYTour. All Rights Reserved.</h3>
+    <h3>International Islamic University Malaysia - Gombak</h3>
+  </div>
+  </div>
 
   </body>
 </html>
