--- a/backpack.html
+++ b/backpack.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Backpackers Essentials</title>
   <style media="screen">
 
 
@@ -27,7 +27,8 @@ p{
 font-size: 220%;
 font-style: normal;
 font-family: 'Spinnaker', sans-serif;
-text-align: left;
+text-align: center;
+
 }
 
 .info p:hover {
@@ -60,14 +61,14 @@ position: left;
 }
 
 h2:hover{
-border:1px solid none;
-background-color: black;
-color: white;
+border:1px solid #8c6767;
+background-color: #8c6767;
+color: #fef2da;
 }
 .topnav {
 display: block;
   overflow: hidden;
-  background-color: #d3c6c1;
+  background-color: #5a5240;
   margin-bottom: 1%;
   margin-left: 0%;
   margin-right: 0%;
@@ -86,15 +87,30 @@ display: block;
 }
 
 .topnav a:hover {
-  text-decoration: line-through;
+  color: white;
+  background-color: black;
 }
 
 .topnav a.active {
   color: white;
-
 }
 
+.footer {
+  position: absolute;
+  right: 0;
+  margin-top: 0%;
+  left: 0;
+  text-align: center;
+  background-color: #5a5240;
+  padding: 30px;
+  color: white;
+  font-size: 12px;
+  font-family: 'Montserrat', sans-serif;
+}
 
+hr{
+  border: 4px solid #898c9b;
+}
 
 </style>
 </head>
@@ -145,9 +161,13 @@ and could not eat and if local, you need to really take a good care of your budg
 Its easy, just bring some sort of food that you think might save you from starving such as instant noodles, bread, instant porridge
 and etcetra. It will really help you to save some of your budget and definitely kill your hunger.</h1>
 
-<h1><br><strong>So thats it. Happy travel</strong>.</h1>
-
-
+<h1><br>So thats it. Happy travel.</h1>
+</div>
+<hr>
+<div class="footer">
+  <h3>Copyright © 2018, MYTour. All Rights Reserved.</h3>
+  <h3>International Islamic University Malaysia - Gombak</h3>
+</div>
 
 
 
