--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <script>
 
 
@@ -52,7 +53,7 @@
 
       h1{
         font-weight: bold;
-        font-family: fantasy;
+      font-family: 'Dancing Script', cursive;
         text-align: center;
         font-size: 50px;
       }
@@ -85,7 +86,7 @@
 	font-size:1.200em;
 	text-shadow:0px 1px 0px #1a1a1a;
 	color:#fff;
-  //margin-top: 10px;
+  margin-top: 10px;
 }
 
 .accordion-section-title.active,
@@ -209,7 +210,7 @@ text-align: center;
 
 .topnav {
     overflow: hidden;
-    background-color: #d3c6c1;
+    background-color: #5a5240;
     margin-bottom: 1%;
     margin-left: 0%;
     margin-right: 0%;
@@ -227,11 +228,34 @@ text-align: center;
 }
 
 .topnav a:hover {
-    text-decoration: line-through;
+    color: white;
+    background-color: black;
 }
 
 .topnav a.active {
     color: white;
+}
+
+.footer {
+  position: absolute;
+  right: 0.75%;
+  margin-top: 0;
+  left: 0.75%;
+  text-align: center;
+  background-color: #5a5240;
+  padding: 30px;
+  color: white;
+
+}
+
+.footer h3{
+  font-size: 90%;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.foot hr{
+  margin-top: 12%;
+  border: 4px solid #898c9b;
 }
 
     </style>
@@ -516,6 +540,14 @@ to you.</p>
   </div>
 </div>
 </form>
+<div class="foot">
+  <hr>
+  <div class="footer">
+    <h3>Copyright © 2018, MYTour. All Rights Reserved.</h3>
+    <h3>International Islamic University Malaysia - Gombak</h3>
+  </div>
+</div>
+
 
   </body>
 </html>
