--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Spinnaker" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
     <style media="screen">
     body{
       background-color: #fef2da;
@@ -18,41 +19,41 @@
 
     .container{
       position: relative;
-    text-align: center;
+      text-align: center;
     }
 
     p{
     font-size: 650%;
     font-style: normal;
     font-family: 'Spinnaker', sans-serif;
-  }
+    }
 
-  h1{
+    h1{
     font-size: 300%;
     font-family: 'Dancing Script', cursive;
 
-  }
+    }
 
-   h2{ display:block;
+    h2{ display:block;
     padding: 10px;
     color: #434444;
-  }
+    }
 
-h2:hover{
-    background-color: black;
+    h2:hover{
+    background-color: #8c6767;
     color: white;
-}
+    }
 
-  .topnav {
+    .topnav {
       overflow: hidden;
-      background-color: #d3c6c1;
+      background-color: #5a5240;
       margin-bottom: 1%;
       margin-left: 0%;
       margin-right: 0%;
       margin-top: 0%;
-  }
+    }
 
-  .topnav a {
+    .topnav a {
       float: right;
       color: black;
       text-align: center;
@@ -60,36 +61,53 @@ h2:hover{
       text-decoration: none;
       font-size: 12px;
       font-family: 'Montserrat', sans-serif;
-  }
+    }
 
-  .topnav a:hover {
-      text-decoration: line-through;
-  }
-
-  .topnav a.active {
+    .topnav a:hover {
+      background-color: black;
       color: white;
-  }
+    }
 
-  .left {
+    .topnav a.active {
+      color: white;
+    }
+
+    .left {
     position: absolute;
-    margin: auto;
+    margin-bottom: 15%;
     top: 57px;
-    left: 24px;
+    left: 17px;
     background-color: lightgrey;
     opacity: 0.65;
     filter: alpha(opacity=50);
     width:50%;
-    height:73.5%;
+    height:69.5%;
     padding-left:none;
     padding-top: 101px;
-}
+    }
+
+    .footer {
+      position: absolute;
+      right: 0;
+      margin-top: 0%;
+      left: 0;
+      text-align: center;
+      background-color: #5a5240;
+      padding: 30px;
+      color: white;
+      font-size: 12px;
+      font-family: 'Montserrat', sans-serif;
+    }
+
+    hr{
+      border: 4px solid #898c9b;
+    }
+
   </style>
   </head>
-
   <body>
 
 <div class="container">
-
   <div class="topnav">
     <a href="faq.html#faq">F.A.Q</a>
     <a href="moment.html#moment">Moment</a>
@@ -100,20 +118,23 @@ h2:hover{
     <a href="destination.html#destination">Destination</a>
     <a class="active" href="index.html#home">Home</a>
     </div>
-
     <div class="centre">
       <img src="aerial-architectural-design-architecture-313032.jpg"
            alt="Background Image">
     </div>
+    <div class="left" style="line-height:2px;">
+      <p> MYTOUR</p>
+      <h1>Explore the Moment</h1>
+      <br>
+      <h2 onclick="location.href='aboutus.html#aboutus'">About Us</h2>
+    </div>
 
-
-  <div class="left" style="line-height:2px;">
-    <p> MYTOUR</p>
-    <h1>Explore the Moment</h1>
     <br>
-    <h2 onclick="location.href='aboutus.html#aboutus'">About Us</h2>
+    <hr>
+    <div class="footer">
+      <h3>Copyright © 2018, MYTour. All Rights Reserved.</h3>
+      <h3>International Islamic University Malaysia - Gombak</h3>
+    </div>
   </div>
-
-
   </body>
 </html>
