--- a/kkitnry.html
+++ b/kkitnry.html
@@ -31,7 +31,7 @@
       font-size: 50px;
     }
 
-    h1, h2{
+    h2{
       color: black;
       font-size: 30px;
       padding-left: 10%;
@@ -40,9 +40,10 @@
     p{
       color: black;
       font-size: 15px;
-      text-align: center;
-      
-    }
+      margin-left: 10%;
+      margin-right: 10%;
+      text-align: justify;
+      }
     h3{
       color: #154360;
       font-size: 15px;
@@ -81,6 +82,7 @@
       font-weight: bold;
       color: #000000;
       font-size: 35px;
+      text-align: center;
     }
 
     .con img{
@@ -131,7 +133,8 @@
     }
 
     .topnav a:hover {
-        text-decoration: line-through;
+        color: white;
+        background-color: black;
     }
 
     .topnav a.active {
@@ -157,11 +160,11 @@
 
 <div class="background">
   <div class="transbox">
-    <p>4D3N Kota Kinabalu & Kundasang Itinerary</p>
+    <p>Kota Kinabalu & Kundasang Itinerary</p>
   </div>
 </div>
 
-      <h1>4D3N in Kota Kinabalu & Kundasang</h1>
+      <h1>4Days 3Nights</h1>
 
 
         <h2>Itinerary Summary</h2>
