--- a/langkawiitnry.html
+++ b/langkawiitnry.html
@@ -25,16 +25,21 @@
       text-align: center;
       font-size: 50px;
     }
-    h1, h2{
+    h2{
       color: black;
       font-size: 30px;
       padding-left: 10%;
     }
+
+  .background p {
+      text-align: center;
+    }
     p{
       color: black;
       font-size: 15px;
-      text-align: center;
-      padding-right: 10%;
+      margin-left: 10%;
+      margin-right: 10%;
+      text-align: justify;
     }
     h3{
       color: #154360  ;
@@ -70,7 +75,7 @@
       font-weight: bold;
       color: #000000;
       font-size: 35px;
-    margin-left: 190px;
+      text-align: center;
     }
   .con img{
       width: 70%;
@@ -156,11 +161,11 @@
 
 <div class="background">
   <div class="transbox">
-    <p>3D2N Langkawi Itinerary</p>
+    <p>Langkawi Itinerary</p>
   </div>
 
 </div>
-      <h1>3D2N in Langkawi</h1>
+      <h1>3Days 2Nights</h1>
 
 
         <h2>Itinerary Summary</h2>
