--- a/hsabah.html
+++ b/hsabah.html
@@ -2,12 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>HR Sabah</title>
+    <title></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/eggplant/jquery-ui.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-        <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
         <script>
 
 
@@ -36,87 +35,12 @@
       } );
 
 </script>
-<script type="text/javascript">
-  function init() {
-var mapOptions = { // Set up the map options
-center: new google.maps.LatLng(5.973049, 116.075972),
-mapTypeId: google.maps.MapTypeId.ROADMAP, zoom: 13 };
-var mapOptions2 = { // Set up the map options
-center: new google.maps.LatLng(5.982567, 116.076034),
-mapTypeId: google.maps.MapTypeId.ROADMAP, zoom: 13 };
-var mapOptions3 = { // Set up the map options
-center: new google.maps.LatLng(5.965071, 116.068819),
-mapTypeId: google.maps.MapTypeId.ROADMAP, zoom: 13 };
-var mapOptions4 = { // Set up the map options
-center: new google.maps.LatLng(5.982177, 116.580115),
-mapTypeId: google.maps.MapTypeId.ROADMAP, zoom: 13 };
-var mapOptions5 = { // Set up the map options
-center: new google.maps.LatLng(5.976906, 116.579625),
-mapTypeId: google.maps.MapTypeId.ROADMAP, zoom: 13 };
-var venueMap; // Map() draws a map
-venueMap = new google.maps.Map(document.getElementById('map'), mapOptions);
-var venueMap2; // Map() draws a map
-venueMap2 = new google.maps.Map(document.getElementById('map2'), mapOptions2);
-
-var venueMap3; // Map() draws a map
-venueMap3 = new google.maps.Map(document.getElementById('map3'), mapOptions3);
-
-var venueMap4; // Map() draws a map
-venueMap4 = new google.maps.Map(document.getElementById('map4'), mapOptions4);
-
-var venueMap5; // Map() draws a map
-venueMap5 = new google.maps.Map(document.getElementById('map5'), mapOptions5);
-}
-function loadScript() {
-var script = document.createElement('script'); // Create <script> element
-script.src = 'http://maps.googleapis.com/maps/api/js?sensor=false&callback=init';
-document.body.appendChild(script); // Add element to page
-var script2 = document.createElement('script2'); // Create <script> element
-script.src = 'http://maps.googleapis.com/maps/api/js?sensor=false&callback=init';
-document.body.appendChild(script2); // Add element to page
-var script3 = document.createElement('script3'); // Create <script> element
-script.src = 'http://maps.googleapis.com/maps/api/js?sensor=false&callback=init';
-document.body.appendChild(script3); // Add element to page
-var script4 = document.createElement('script4'); // Create <script> element
-script.src = 'http://maps.googleapis.com/maps/api/js?sensor=false&callback=init';
-document.body.appendChild(script4); // Add element to page
-var script5 = document.createElement('script5'); // Create <script> element
-script.src = 'http://maps.googleapis.com/maps/api/js?sensor=false&callback=init';
-document.body.appendChild(script5); // Add element to page
-}
-window.onload = loadScript; // on load call loadScript()
-</script>
     <style type="text/css">
     body{
       padding: 0;
       margin: 0;
       background-color: #fef2da;
     }
-
-    .footer {
-      position: absolute;
-      right: 0.75%;
-      margin-top: 0;
-      left: 0.75%;
-      text-align: center;
-      background-color: #5a5240;
-      padding: 30px;
-      color: white;
-
-    }
-
-    .footer h3{
-      font-size: 90%;
-      font-family: 'Montserrat', sans-serif;
-    }
-
-    .foot hr{
-
-      border: 4px solid #898c9b;
-      margin-left: 0.7%;
-      margin-right: 0.7%;
-    }
-
     .container-content{
       margin: 0 auto;
       min-width: 1000px;
@@ -130,20 +54,15 @@ window.onload = loadScript; // on load call loadScript()
       }
       h1{
         color: black;
-        font-size: 50px;
-        font-family: 'Dancing Script', cursive;
-        text-align: center;
+        font-size: 30px;
+        margin-left: 13%;
+        font-family: Arial;
       }
       h4{
         margin-left: 13%;
         font-family: Arial;
       }
-      #map, #map2, #map3, #map4, #map5{
-        float:left;
-        width: 400px;
-        height: 400px;
-       margin: 50px;
-        }
+
 .t:after {
 content: "";
 display: table;
@@ -246,14 +165,13 @@ font-size: 20px;
   margin-left: 27%;
   margin-bottom: 5px;
 }
-
 .topnav {
     overflow: hidden;
     background-color: #5a5240;
     margin-bottom: 1%;
     margin-left: 0.5%;
     margin-right: 0.5%;
-    margin-top: 1%;
+    margin-top: 0.5%;
 }
 
 .topnav a {
@@ -262,7 +180,7 @@ font-size: 20px;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 13px;
     font-family: 'Montserrat', sans-serif;
 }
 
@@ -275,12 +193,29 @@ font-size: 20px;
     color: white;
 }
 
+.footer {
+  position: absolute;
+  right: 0;
+  margin-top: 0%;
+  left: 0;
+  text-align: center;
+  background-color: #5a5240;
+  padding: 30px;
+  color: white;
+  font-size: 12px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+hr{
+  border: 4px solid #898c9b;
+}
+
+
   </style>
 
 
   </head>
   <body>
-
     <div class="topnav">
       <a href="faq.html#faq">F.A.Q</a>
       <a href="moment.html#moment">Moment</a>
@@ -291,7 +226,7 @@ font-size: 20px;
       <a href="destination.html#destination">Destination</a>
       <a href="index.html#home">Home</a>
       </div>
-      <h1 >Sabah</h1>
+      <h1>Sabah</h1>
     <h4>1.The Palace Hotel Kota Kinabalu</h4>
 
     <div class="t">
@@ -302,7 +237,7 @@ font-size: 20px;
 
   </div>
 
-<section class="container-content" >
+<section class="container-content">
 <div id="tabs">
 <ul>
 <li><a href="#tabs-1">Info</a></li>
@@ -371,8 +306,7 @@ Atkinson Clock Tower(1.05 km)
 
 
 <hr>
-<div id="map"  style='width:90%' style='height: 10%'></div>
-<script src="js/google-map.js"></script>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.1591520362877!2d116.07380511387427!3d5.972808930979067!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x323b912917e786f1%3A0x8d57c5a3465c56f5!2sThe+Palace+Hotel+Kota+Kinabalu!5e0!3m2!1sen!2smy!4v1545066512579" width="1000" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 <hr>
 <br>
 <div class="row">
@@ -450,7 +384,7 @@ Atkinson Clock Tower(1.05 km)
 </div>
  <br><br>
 <hr>
-</section >
+</section>
 <h4>2.Mandarin Hotel Kota Kinabalu</h4>
 
 <div class="con">
@@ -525,8 +459,7 @@ KK Plaza(0.27 km)
 
 <h6 class="hotel link"><a href="https://www.agoda.com/mandarin-hotel/hotel/kota-kinabalu-my.html?cid=-218 "target="_blank">CHECK ROOM PRICE HERE</a></h6>
 <hr>
-<div id="map2"  style='width:90%' style='height: 10%'></div>
-<script2 src="js/google-map.js"></script2>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.091135535142!2d116.07389941387422!3d5.982188330880925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x323b698fed64abdf%3A0x653dc6bec8a06537!2sMandarin+Hotel!5e0!3m2!1sen!2smy!4v1545066564344" width="1000" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 <hr>
 <br>
 <div class="row">
@@ -682,8 +615,7 @@ Hospital Queen Elizabeth(1.00 km)
 
 <h6 class="hotel link"><a href="https://www.agoda.com/th-hotel-kota-kinabalu/hotel/kota-kinabalu-my.html?cid=-218 "target="_blank">CHECK ROOM PRICE HERE</a></h6>
 <hr>
-<div id="map3"  style='width:90%' style='height: 10%'></div>
-<script3 src="js/google-map.js"></script3>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.2173101935973!2d116.06668351387425!3d5.964777331063005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x323b69b908f852ef%3A0x244c46e3397bfb20!2sTH+Hotel+Kota+Kinabalu!5e0!3m2!1sen!2smy!4v1545066724398" width="1000" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 <hr>
 <br>
 <div class="row">
@@ -827,8 +759,7 @@ Crocker Range National Park(6.58 km)
 <h6 class="hotel link"><a href="https://www.agoda.com/kinabalu-pine-resort/hotel/kinabalu-national-park-my.html?cid=-218 "target="_blank">CHECK ROOM PRICE HERE</a></h6>
 <hr>
 
-<div id="map4"  style='width:90%' style='height: 10%'></div>
-<script4 src="js/google-map.js"></script4>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.093653765839!2d116.5779905138743!3d5.981841330884569!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x323b9995b584236d%3A0xa010fa605a71f5b9!2sKinabalu+Pine+Resort!5e0!3m2!1sen!2smy!4v1545066982979" width="1000" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 
 <hr>
 <br>
@@ -972,9 +903,7 @@ Crocker Range National Park(7.07 km)
 <h6 class="hotel link"><a href="https://www.agoda.com/perkasa-hotel-mt-kinabalu/hotel/kinabalu-national-park-my.html?cid=-218"target="_blank">CHECK ROOM PRICE HERE</a></h6>
 <hr>
 
-<div id="map5"  style='width:90%' style='height: 10%'></div>
-<script5 src="js/google-map.js"></script5>
-
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.1312719983894!2d116.57735061387422!3d5.976655330938854!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x323b91254ebffdf9%3A0x47232225be762a64!2sPerkasa+Hotel+Mt.+Kinabalu!5e0!3m2!1sen!2smy!4v1545067047991" width="1000" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
 <hr>
 <br>
 <div class="row">
@@ -1054,13 +983,10 @@ Crocker Range National Park(7.07 km)
 <p>4/5</p>
 </div>
 </section>
-
-<div class="foot">
-  <hr>
-  <div class="footer">
-    <h3>Copyright © 2018, MYTour. All Rights Reserved.</h3>
-    <h3>International Islamic University Malaysia - Gombak</h3>
-  </div>
+<hr>
+<div class="footer">
+  <h3>Copyright © 2018, MYTour. All Rights Reserved.</h3>
+  <h3>International Islamic University Malaysia - Gombak</h3>
 </div>
 </body>
 </html>
