--- a/itinerary.html
+++ b/itinerary.html
@@ -141,7 +141,7 @@
 
             <p>Kota Kinabalu & Kundasang 4 Days 3 Nights</p>
             <img src="Kota-Kinabalu.jpg">
-            <h2 onclick="location.href='kkitnry.html#kotakundasang'">Read More</h2>
+            <h2 onclick="location.href='kkitnry.html#kotankundasang'">Read More</h2>
             <br>
 
             <hr>
