--- a/aboutus.html
+++ b/aboutus.html
@@ -2,25 +2,125 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-
-
     <style>
     body, html {
+      background-color: #fef2da;
       height: 100%;
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
-      background-color: #fef2da;
+    }
+
+    * {
+      box-sizing: border-box;
+    }
+
+    .bg-image {
+      background-image: url("b5.jpg");
+      filter: blur(1px);
+      -webkit-filter: blur(1px);
+      height: 55%;
+      width: auto;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    .bg-text {
+      background-color: rgb(0,0,0);
+      background-color: rgba(0,0,0, 0.2);
+      color: black;
+      font-weight: bold;
+      border: 1px solid #f1f1f1;
+      position: absolute;
+      top: 40%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+      width: 80%;
+      text-align: center;
+    }
+
+    h2{
+      text-align: center;
+      color: black;
+      margin-top: 3%;
+      font-family: 'Dancing Script', cursive;
+      font-size: 30px;
+    }
+    h3{
+      margin-left: 3%;
+    }
+
+    h5{
+      text-align: center;
+    }
+
+    .riqqah, .mustaqimah, .syazwina {
+      position: relative;
+      display: inline-block;
+      width: 25%;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      margin-right: 20px;
+      margin-left: 20px;
+      left: 15%;
+    }
+
+    img {
+      display: inline-block;
+      width: 40%;
+      height: 40%;
+      border-radius: 50%;
+    }
+
+    .overlay {
+      position: absolute;
+      bottom: 100%;
+      left: 0;
+      right: 0;
+      background-color:#ff99ab;
+      overflow: hidden;
+      width: 40%;
+      height:0;
+      transition: .5s ease;
+      opacity: 0.8;
+      border-radius: 50%;
+    }
+
+    .riqqah:hover .overlay {
+      bottom: 0;
+      height: 100%;
+    }
+
+    .mustaqimah:hover .overlay {
+      bottom: 0;
+      height: 100%;
+    }
+
+    .syazwina:hover .overlay {
+      bottom: 0;
+      height: 100%;
+    }
+
+    .text {
+      color: white;
+      font-size: 20px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      text-align: center;
     }
 
     .topnav {
-      display: block;
         overflow: hidden;
         background-color: #5a5240;
         margin-bottom: 1%;
         margin-left: 0.5%;
         margin-right: 0.5%;
-        margin-top: 0.6%;
+        margin-top: 0.5%;
     }
 
     .topnav a {
@@ -29,9 +129,8 @@
         text-align: center;
         padding: 14px 16px;
         text-decoration: none;
-        font-size: 12px;
+        font-size: 13px;
         font-family: 'Montserrat', sans-serif;
-        display: block;
     }
 
     .topnav a:hover {
@@ -41,38 +140,26 @@
 
     .topnav a.active {
         color: white;
+
     }
 
-    * {
-      box-sizing: border-box;
-    }
-
-    .bg-image {
-      background-image: url("beach-clouds-daytime-994605.jpg");
-      filter: blur(1px);
-      -webkit-filter: blur(1px);
-      height: 90%;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      margin-left: 2%;
-      margin-right: 2%;
-    }
-
-    .bg-text {
-      background-color: rgb(0,0,0.4);
-      background-color: rgba(0,0,0,0.2);
-      color: black ;
-      font-weight: bold;
-      border: 1px solid none;
+    .footer {
       position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 2;
-      width: 80%;
-      padding: 20px;
+      right: 0.7%;
+      margin-top: 0%;
+      left: 0.7%;
       text-align: center;
+      background-color: #5a5240;
+      padding: 30px;
+      color: white;
+      font-size: 12px;
+      font-family: 'Montserrat', sans-serif;
+    }
+
+     hr{
+      border: 4px solid #898c9b;
+      margin-left: 0.7%;
+      margin-right: 0.7%;
     }
 
     input[type=text], select, textarea {
@@ -88,31 +175,39 @@
       padding: 10px;
       width: 150px;
       border-radius: 10px;
-     background-color: #CACFD2  ;
-       font-weight:bold;
+      background-color: #CACFD2  ;
+      font-weight:bold;
+    }
+
+    iframe{
+      float: left;
+      width: 600px;
+      height: 450px;
+      margin-left: 2%;
     }
 
     input[type=submit]:hover {
-        background-color: #5D6D7E;
+        background-color: #5D6D7E ;
     }
 
-    .box {
-        border-radius: 5px;
-        background-color: #f2f2f2;
-        padding: 10px;
+    .container {
+      float: none;
+      border-radius: 5px;
+      background-color: #fff3db;
+      padding: 10px;
     }
 
     .column {
-        float: left;
+        float: right;
         width: 50%;
-        margin-top: 6px;
-        padding: 20px;
+        margin-right: 2%;
     }
 
     .row:after {
         content: "";
         display: table;
         clear: both;
+
     }
 
     @media screen and (max-width: 600px) {
@@ -121,93 +216,93 @@
             margin-top: 0;
         }
     }
-
-    .footer {
-      position: absolute;
-      right: 0;
-      margin-top: 0%;
-      left: 0;
-      text-align: center;
-      background-color: #5a5240;
-      padding: 30px;
-      color: white;
-      font-size: 12px;
-      font-family: 'Montserrat', sans-serif;
-    }
-
-    hr{
-      border: 4px solid #898c9b;
-    }
-
-
     </style>
     <title>About Us</title>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
   </head>
   <body>
-
-    <div class="container">
-
-      <div class="topnav">
-        <a href="faq.html#faq">F.A.Q</a>
-        <a href="moment.html#moment">Moment</a>
-        <a href="article.html#article">Article</a>
-        <a href="itinerary.html#itinerary">Itinerary</a>
-        <a href="hotel.html#hotel">Hotel</a>
-        <a href="food.html#food">Food</a>
-        <a href="destination.html#destination">Destination</a>
-        <a class="active" href="index.html#home">Home</a>
-        </div>
-
+    <div class="topnav">
+      <a href="faq.html#faq">F.A.Q</a>
+      <a href="moment.html#moment">Moment</a>
+      <a href="article.html#article">Article</a>
+      <a href="itinerary.html#itinerary">Itinerary</a>
+      <a href="hotel.html#hotel">Hotel</a>
+      <a href="food.html#food">Food</a>
+      <a href="destination.html#destination">Destination</a>
+      <a class="active" href="index.html#home">Home</a>
       </div>
-
-
     <div class="bg-image"></div>
     <div class="bg-text">
-  <h1>MYTour</h1>
+  <h1>MYTOUR</h1>
   <p>We have been operating as a platform for giving some ideas
     to help you to find unexplored, 'hidden' places with exclusive scenery in Malaysia.
     We are real people, with a real passion for what we do — see for yourself!</p>
+
 </div>
 
-<div class="box">
-  <div style="text-align:center">
-    <h2>Contact Us</h2>
-    <p>Any enquiries or suggestion, drop us a message</p>
+<div class="container">
+  <h2>Web Developers</h2>
+<div class="riqqah">
+  <img src="riqqah.jpg" alt="riq">
+  <div class="overlay">
+    <div class="text">Riqqah Khairiah</div>
   </div>
-  <div class="row">
-    <div class="column">
-    </div>
-    <div class="column">
-      <form action="/action_page.php">
-        <label for="fname">First Name</label>
-        <input type="text" id="fname" name="firstname" placeholder="Your first name">
-        <label for="lname">Last Name</label>
-        <input type="text" id="lname" name="lastname" placeholder="Your last name">
-        <label for="country">Country</label>
-        <select id="country" name="country">
-          <option value="malaysia">Malaysia</option>
-          <option value="china">China</option>
-          <option value="indonesia">Indonesia</option>
-          <option value="singapore">Singapore</option>
-          <option value="japan">Japan</option>
-          <option value="skorea">South Korea</option>
-          <option value="thai">Thailand</option>
-          <option value="vietnam">Vietnam</option>
-          <option value="usa">United States of America</option>
-        </select>
-        <label for="subject">Subject</label>
-        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
-        <input type="submit" value="Submit">
-      </form>
-    </div>
-  </div>
+</div>
 
+<div class="mustaqimah">
+  <img src="mus.jpeg" alt="mus">
+  <div class="overlay">
+    <div class="text">Mustaqimah Naim</div>
+  </div>
+</div>
+
+<div class="syazwina">
+  <img src="aina.jpe" alt="aina">
+  <div class="overlay">
+    <div class="text">Nur Syazwina</div>
+  </div>
+</div>
+</div>
+<hr>
+<h2>Contact Us</h2>
+<h5>Any enquiries or suggestion, drop us a message</h5>
+<br>
+
+<h3>Our Location</h3>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.3909683120487!2d101.7306946075711!3d3.2526357629801974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf808897bf1163a3!2sInternational+Islamic+University+Malaysia!5e0!3m2!1sen!2smy!4v1545049323086"
+frameborder="0" style="border:0" allowfullscreen></iframe>
+<div class="row">
+  <div class="column">
+</div>
+<div class="column">
+<form action="/action_page.php">
+  <label for="fname">First Name</label>
+  <input type="text" id="fname" name="firstname" placeholder="Your first name">
+  <label for="lname">Last Name</label>
+  <input type="text" id="lname" name="lastname" placeholder="Your last name">
+  <label for="country">Country</label>
+  <select id="country" name="country">
+    <option value="malaysia">Malaysia</option>
+    <option value="china">China</option>
+    <option value="indonesia">Indonesia</option>
+    <option value="singapore">Singapore</option>
+    <option value="japan">Japan</option>
+    <option value="skorea">South Korea</option>
+    <option value="thai">Thailand</option>
+    <option value="vietnam">Vietnam</option>
+    <option value="usa">United States of America</option>
+  </select>
+  <label for="subject">Subject</label>
+  <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+  <input type="submit" value="Submit">
+</form>
+</div>
+</div>
+<div class="foot">
   <hr>
   <div class="footer">
     <h3>Copyright © 2018, MYTour. All Rights Reserved.</h3>
     <h3>International Islamic University Malaysia - Gombak</h3>
   </div>
-  </div>
-
   </body>
 </html>
