--- a/destination.html
+++ b/destination.html
@@ -4,27 +4,30 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 
-* {
+img{
+  height: 50%;
+  width: 45%;
+}
+
+*, html {
     box-sizing: border-box;
+    text-align: left;
 }
 
-.column {
-    float: left;
-    width: 33.33%;
-    padding: 5px;
-}
-
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
+iframe{
+  float: right;
+  height: 390px;
+  width: 600px;
+  border:0;
+  margin-bottom: 10px;
 }
 
 h2 {
   font-weight: bold;
-  font-family: fantasy;
+  font-family: 'Dancing Script', cursive;
   position: center;
   font-size: 50px;
+  text-align: center;
 }
 
 body{
@@ -32,44 +35,38 @@ body{
 }
 
 .accordion {
-    background-color: #3d2d2d;
-    color:  white;
+    background-color:#3d2d2d;
+    color:  #fff;
     cursor: pointer;
     padding: 18px;
     width: 100%;
     border: none;
-    text-align: left;
     outline: none;
     font-size: 15px;
     font-weight: bold;
     transition: 0.4s;
-}
-.accordion.active,
-.accordion:hover{
-    background-color: #8c6767;
-    text-decoration: none;
+    text-align: center;
 }
 
+.active, .accordion:hover {
+    background-color: #8c6767; /ffccbb;
+}
 
 .panel {
     padding: 0 10px;
     display: none;
     background-color: #f7f7f7;
     overflow: hidden;
-}
-
-.container{
-  position: relative;
-text-align: center;
+    text-align: left;
 }
 
 .topnav {
     overflow: hidden;
-    background-color: #d3c6c1;
+    background-color: #5a5240;
     margin-bottom: 1%;
-    margin-left: 0%;
-    margin-right: 0%;
-    margin-top: 0%;
+    margin-left: 0.5%;
+    margin-right: 0.5%;
+    margin-top: 0.5%;
 }
 
 .topnav a {
@@ -78,68 +75,106 @@ text-align: center;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 12px;
+    font-size: 13px;
     font-family: 'Montserrat', sans-serif;
 }
 
 .topnav a:hover {
-    text-decoration: line-through;
+    color: white;
+    background-color: black;
 }
 
 .topnav a.active {
     color: white;
+    background-color: #5a5240;
+}
+
+.footer {
+  position: absolute;
+  right: 0.7%;
+  margin-top: 0%;
+  left: 0.7%;
+  background-color: #5a5240;
+  padding: 30px;
+  color: white;
+  font-size: 13px;
+  font-family: 'Montserrat', sans-serif;
+}
+h3{
+  text-align: center;
+}
+
+hr{
+  border: 4px solid #898c9b;
+  margin-left: 0.7%;
+  margin-right: 0.7%;
 }
 
 </style>
-<title>MYTour-Destination</title>
+<title>Destination</title>
+<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
 </head>
 <body>
+  <div class="topnav">
+    <a href="faq.html#faq">F.A.Q</a>
+    <a href="moment.html#moment">Moment</a>
+    <a href="article.html#article">Article</a>
+    <a href="itinerary.html#itinerary">Itinerary</a>
+    <a href="hotel.html#hotel">Hotel</a>
+    <a href="food.html#food">Food</a>
+    <a class="active" href="destination.html#destination">Destination</a>
+    <a href="index.html#home">Home</a>
+    </div>
 
-  <div class="container">
-
-    <div class="topnav">
-      <a href="faq.html#faq">F.A.Q</a>
-      <a href="moment.html#moment">Moment</a>
-      <a href="article.html#article">Article</a>
-      <a href="itinerary.html#itinerary">Itinerary</a>
-      <a href="hotel.html#hotel">Hotel</a>
-      <a href="food.html#food">Food</a>
-      <a class="active" href="destination.html#destination">Destination</a>
-      <a href="index.html#home">Home</a>
-      </div>
-
-
-<h2>Embark on making the memory</h2>
+<h2>Embark on Making New Memory</h2>
 
 <button class="accordion">Johor</button>
 <div class="panel">
-  <p>Rawa Island Resort, Pulau Rawa.</p>
+    <p>Rawa Island, Johor.</p>
+  <img src="rawa island.jpg">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7971.917649114879!2d103.97150362234207!3d2.5203529926539625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31c53713051ed20f%3A0x8fb413cff390e7c7!2sPulau+Rawa!5e0!3m2!1sen!2smy!4v1544978572573"></iframe>
+</div>
+
+<button class="accordion">Kedah</button>
+<div class="panel">
+  <p>Payar Island, Kedah.</p>
+  <img src="payar island.jpg">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2032967.303929545!2d99.68723428172316!3d5.675893922993773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304b73d28a550ab5%3A0x722e17e67003ce39!2sPulau+Payar!5e0!3m2!1sen!2smy!4v1544980370478"></iframe>
 </div>
 
 <button class="accordion">Pahang</button>
 <div class="panel">
-  <p>Japamala Resort, Pulau Tioman.</p>
-</div>
-
-<button class="accordion">Terengganu</button>
-<div class="panel">
-  <p>Laguna Redang Resort, Pulau Redang.</p>
+  <p>Tioman Island, Pahang.</p>
+  <img src="tioman island.jpg">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d315843.0904778891!2d103.94936205139!3d2.6914530747022787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31c51975ffe77997%3A0xcec32ce8e830274d!2sPulau+Tioman!5e0!3m2!1sen!2smy!4v1544980774660"></iframe>
 </div>
 
 <button class="accordion">Sabah</button>
 <div class="panel">
   <p>Pulau Bohey Dulang, Semporna.</p>
+  <img src="pulau bohey.jpg">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31815.541752702436!2d118.75912028234633!3d4.604279631672859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x32400f417fcc9bd5%3A0x112f73cee5cbfdbb!2sBoheydulang+Island!5e0!3m2!1sen!2smy!4v1544980917882"></iframe>
 </div>
 
 <button class="accordion">Selangor</button>
 <div class="panel">
   <p>Sasaran, Kuala Selangor.</p>
+  <img src="sky mirror.jpg">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3983.031400273274!2d101.24865211431027!3d3.342404597566873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31ccf0681661703b%3A0xd7dc4f668241d461!2sSky+mirror!5e0!3m2!1sen!2smy!4v1544981042613"></iframe>
 </div>
 
-<button class="accordion">Melaka</button>
+<button class="accordion">Terengganu</button>
 <div class="panel">
-  <p>Paya Rumput, Melaka.</p>
+  <p>Redang Island, Terengganu.</p>
+  <img src="redang island.jpg">
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14335.244268672026!2d103.00040788117646!3d5.777129068225181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31b710433376c725%3A0x1f0f8fc2061a7168!2sRedang+Island!5e0!3m2!1sen!2smy!4v1544981260583"></iframe>
 </div>
+
+  <hr>
+  <div class="footer">
+    <h3>Copyright © 2018, MYTour. All Rights Reserved.</h3>
+    <h3>International Islamic University Malaysia - Gombak</h3>
+  </div>
 
 <script>
 var acc = document.getElementsByClassName("accordion");
@@ -158,20 +193,6 @@ for (i = 0; i < acc.length; i++) {
 }
 </script>
 
-<div class="row">
-  <div class="column">
-    <img src="japamala.jpg" alt="b1" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="Pulau-Rawa-Malaysia-Photo-by-Phalinn-Ooi-672x372.jpg" alt="b2" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="pulau bohey.jpg" alt="b3" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="sky mirror.jpg" alt="mirror" style="width:100%">
-  </div>
-</div>
 
 </body>
 </html>
