--- a/hrlangkawi.html
+++ b/hrlangkawi.html
@@ -2,9 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Hotel Review</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Langkawi</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/eggplant/jquery-ui.css">
+        <link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
         <script>
@@ -52,9 +53,10 @@ body{
 }
 h1{
   color: black;
-  font-size: 30px;
-  margin-left: 13%;
-  font-family: Arial;
+  font-size: 50px;
+
+  font-family: 'Dancing Script', cursive;
+  text-align: center;
 }
 h4{
   margin-left: 13%;
@@ -185,9 +187,9 @@ font-size: 20px;
 
 .footer {
   position: absolute;
-  right: 0;
+  right: 0.7%;
   margin-top: 0%;
-  left: 0;
+  left: 0.7%;
   text-align: center;
   background-color: #5a5240;
   padding: 30px;
@@ -196,8 +198,10 @@ font-size: 20px;
   font-family: 'Montserrat', sans-serif;
 }
 
-hr{
+.foot hr{
   border: 4px solid #898c9b;
+  margin-left: 0.7%;
+  margin-right: 0.7%;
 }
 
 
@@ -977,10 +981,11 @@ Cenang Beach(0.09 km)
 <p>4/5</p>
 </div>
 </section>
-<hr>
-<div class="footer">
-  <h3>Copyright © 2018, MYTour. All Rights Reserved.</h3>
-  <h3>International Islamic University Malaysia - Gombak</h3>
-</div>
+<div class="foot">
+  <hr>
+  <div class="footer">
+    <h3>Copyright © 2018, MYTour. All Rights Reserved.</h3>
+    <h3>International Islamic University Malaysia - Gombak</h3>
+  </div>
   </body>
 </html>
