--- a/food.html
+++ b/food.html
@@ -192,7 +192,7 @@ hr{
   frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
    <hr><br>
    <h3>Gulai Batang Pisang</h3>
-  <img src="gulai batang pisang.jpg">
+  <img src="gulai batang pisang.JPG">
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.50317448372!2d99.82484181403565!3d6.328784627153895!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x304c7f44485b8c13%3A0x53428e4e07327d7f!2sJem&#39;s+Gulai+Batang+Pisang!5e0!3m2!1sen!2smy!4v1545067816749"
   frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
@@ -270,7 +270,7 @@ hr{
 <div id="Terengganu" class="tabcontent">
   <br>
    <h3>Nasi Dagang</h3>
-  <img src="nasi dagang.jpg">
+  <img src="nasi dagang.JPG">
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d508378.5351682943!2d102.58673185612572!3d5.461310606621208!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31b7bb51d82b6409%3A0xcc73a5a891b5fd98!2sDD+Corner+Nasi+DAGANG!5e0!3m2!1sen!2smy!4v1545068380759"
   frameborder="0" style="border:0" allowfullscreen></iframe>
   <iframe src="https://www.youtube.com/embed/8JLltUUEIDM?start=7"
@@ -318,7 +318,7 @@ hr{
 <div id="Kelantan" class="tabcontent">
   <br>
   <h3>Nasi Kerabu</h3>
-  <img src="nasi kerabu.jpg">
+  <img src="nasi kerabu.JPG">
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d507917.43839561625!2d101.82043538229325!3d5.98027935359358!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31b6b1f844931ec1%3A0x5810f558d2ac7a27!2sJijah&#39;s+Nasi+Kerabu!5e0!3m2!1sen!2smy!4v1545068689405"
   frameborder="0" style="border:0" allowfullscreen></iframe>
   <iframe src="https://www.youtube.com/embed/cBMI5xgklAo"
